--- a/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
@@ -450,9 +450,9 @@ ul.strengths__list_container {
 }
   // .article__head h1, .business-value h1 { @include vr($margin-bottom: 6); }
 @include mq('tablet-wide'){
-  .content__wrapper{
-    margin: 20em auto;
-  }
+  // .content__wrapper{
+  //   margin: 20em auto;
+  // }
 }
 
 
@@ -482,6 +482,10 @@ ul.strengths__list_container {
 // ==========================================================================
 // services
 // ==========================================================================
+//
+// services splash
+//
+
 .services__splash-wrapper{
   height: 100vh;
 }
@@ -524,22 +528,39 @@ svg#services__arrow--img{
 .services__article_container{
   @include cols();
 }
-.services__panel {
+
+.services__page_head{
+  position: relative;
+}
+
+.services__panel_container{
+  position: relative;
+}
+
+.services__panel_block {
   @include vr($padding: 4 0);
   @include cols();
   position: relative;
 }
 
+.services__panel_flex-container{
+  position: relative;
+}
+
 .services__panel_content {
   max-width: 25em;
-
+  position: relative;
   @include push-auto;
   @include vr($margin-bottom: 1);
 }
 
 .services__panel-img_container--small-screen{
 @include vr($margin-bottom: 2);
+position: relative;
 }
+
+.services__panel-img_container--wide-screen{}
+
 .services__panel_summary {
   @include vr($margin-bottom: 1);
 }
@@ -868,9 +889,10 @@ svg#services__arrow--img{
 }
 
 
-.services__panel{
-  @include vr($padding: 6 0, $margin-top:3, $margin-bottom: 3);
-  overflow: hidden;
+.services__panel_block {
+  min-height: 50vh;
+  @include vr($margin-top:3, $margin-bottom: 3);
+  // overflow: hidden;
 }
 
 
@@ -885,7 +907,7 @@ svg#services__arrow--img{
   padding-right: 0;
 }
 
-.services__panel_head{
+.services__panel_content{
   @include make-col-ready();
   @include make-col(12);
   padding-left: 0px;
@@ -893,7 +915,7 @@ svg#services__arrow--img{
   margin: 0;
 }
 
-.services__panel_content{
+.services__panel_copy{
   @include make-col-ready();
 @include make-col(6);
 padding-left: 0px;
@@ -916,26 +938,37 @@ align-items: center;
 // webdev customizations
 //
 
-
+.services__panel_block--webdev{}
 
 .services__panel_flex-container--webdev{
   width: 90%;
   flex-direction: column;
   justify-content: center;
 }
-.services__panel_head--webdev{
-  max-width: 33%;
-  flex: 0 0 33%;
-  z-index: 3;
-}
-
 .services__panel_content--webdev{
   max-width: 33%;
   flex: 0 0 33%;
-  @include vr($padding: 2 4 4 4);
-  z-index: 3; 
-  background: $black;
+  z-index: 3;
+  @include vr($padding: 4 2 4 2);
+    background: $black;
   color: $tungsten;
+}
+
+.services__panel-headers--webdev{}
+
+.services__panel-img_container--small-screen{}
+
+.services__panel_copy--webdev{
+  flex: 0 0 auto;
+  // max-width: 33%;
+  // flex: 0 0 33%;
+  // @include vr($padding: 2 4 4 4);
+  // z-index: 3; 
+}
+
+.services__panel_copy--webdev, .services__panel_summary--webdev, .services__list_container--webdev{
+  width: 100%;
+  max-width: 100%;
 }
 
   li.services__list-item--webdev{
@@ -943,32 +976,43 @@ align-items: center;
 }
 
 
-.services__panel_img--webdev{
-  width: 100%;
-}
-
-.tungscreens{
-width: 100em;
-max-width: 100em;
-margin-left: 6em;
-}
 .services__panel-img_container--wide-screen---webdev{
 position: absolute;
 display: flex;
-width: 80%;
+width: 107em;
 max-width: 80%;
 align-self: flex-end;
+z-index: 1;
 }
+
+.services__panel_img--webdev{
+  width: 107em;
+  height: auto;
+  display: block;
+}
+
+img.tungscreens{
+margin-left: 6em;
+// height: 37em;
+width: 107em;
+height: 43em;
+}
+
 
 //
 // planning customizations
 //
-.services__panel--planning{
-  overflow: hidden;
-  background: #3d3d3d;
-  @include vr($margin: 0 2, $padding: 0);
-}
 
+
+.services__panel_block--planning{
+  background: #3d3d3d;
+  display: flex;
+  flex-direction: row;
+  @include vr($margin: 0 2, $padding: 0);
+  overflow: hidden;
+  height: 78em;
+
+}
 
 .services__panel_flex-container--planning{
   display: flex;
@@ -976,39 +1020,48 @@ align-self: flex-end;
   z-index: 3;
   width: 26%;
   max-width: 26%;
-  min-height: 600px;
+  height: 100%;
   margin: 0 10% 0 auto;
   justify-content: center;
   align-items: flex-end;
-}
-
-.services__panel_head--planning, .services__panel_content--planning{
-  @include make-col-ready();
- width: 100%;
- max-width: 100%;
-  background: rgba(51, 51, 51, .5);
-  color: $offwhite;
-  z-index: 3;
-}
-
-
-
-.services__panel_head.services__panel_head--planning{
-  @include vr($padding: 4 2 0 2);
+    background: rgba(51, 51, 51, .7);
 }
 
 .services__panel_content--planning{
-  @include vr($padding: 0 2 4 2);
+  @include make-col-ready();
+ width: 100%;
+ max-width: 100%;
+
+  color: $offwhite;
+  z-index: 3;
+  flex: 0 0 auto;
+    @include vr($padding: 4 2 0 2);
 }
 
-.services__panel-headers--planning h3.services__panel-headline{
+.services__panel-headers--planning{}
+.services__panel-headline--planning{}
+
+
+.services__panel_content.services__panel_content--planning{
+
+}
+
+.services__panel_copy--planning, .services__panel_summary--planning, .services__list_container--planning{
+  width: 100%;
+  max-width: 100%;
+}
+
+.services__panel_copy--planning{
+  // @include vr($padding: 0 2 4 2);
+}
+
+.services__panel-headers--planning h3.services__panel_headline{
 text-align: left;
 @include vr($margin: 0 0 2 0);
 }
 
 
-
-.services__panel-bgimg_container-wide-screen--planning{
+.services-panel__bgimg-container_wide-screen--planning{
     position: absolute;
     width: 100%;
     left: -17em;
@@ -1016,6 +1069,9 @@ text-align: left;
     z-index: 0;
 }
 
+.services-panel__bgimg_widescreen--planning{
+  
+}
 
 #blue__a2_bg{
 opacity: .7;
@@ -1023,7 +1079,7 @@ transform: skewY(26deg);
 width: 104em;
 }
 
-.container.services__panel--management{
+.container.services__panel_block--management{
   width: 100%;
   max-width: 100%;
   padding-bottom: 0;
@@ -1041,14 +1097,14 @@ justify-content: center;
 
 }
 
-.services__panel_head--management{
+.services__panel_content--management{
 @include make-col-ready();
 @include make-col(12);
 padding-left: 0px;
 padding-right: 0px;
 }
 
-h3.services__panel-headline.services__panel-headline--management{
+h3.services__panel_headline.services__panel_headline--management{
   @include vr($margin-bottom: 2);
   color: $primary;
 }
@@ -1057,7 +1113,7 @@ h3.services__panel-headline.services__panel-headline--management{
   color: #333;
 }
 
-.services__panel_content--management{
+.services__panel_copy--management{
 @include make-col-ready();
 @include make-col(12);
 padding-left: 0px;
